# geluid

./: .gitignore  README.md  docker-compose.yml
backend/: Cargo.toml  Rocket.toml  package.json  run.sh
backend/js/routes/: album.js  artist.js  disc.js
backend/src/: main.rs
frontend/: Dockerfile  README.md  package.json  run.sh
frontend/public/: index.html
frontend/src/: App.vue  config.js  main.js
frontend/src/api/: album.js  artist.js  search.js  track.js
frontend/src/plugins/: vuetify.js
frontend/src/router/: index.js
frontend/src/store/: index.js
frontend/src/views/: Album.vue  Artist.vue  ArtistBy.vue  Home.vue  Search.vue  Track.vue
js-backend/: Dockerfile
js-backend/js/: db.js  server.js
js-backend/js/routes/: file.js  index.js  track.js
proxy/: nginx.conf
rs-backend/: Cargo.toml
rs-backend/src/: main.rs
src/views/: Artist.vue
