[package]
name = "geluid-backend"
version = "0.1.0"
authors = ["Rink Springer <rink@rink.nu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.7"
serde = { version = "1.0", features = [ "derive" ] }
rocket_conditional_attach = "0.1.0"

[dependencies.rocket_contrib]
version = "0.4.6"
default-features = false
features = [ "json", "postgres_pool", "serve" ]
